2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
	$(outdir)/%.ly $(outdir)/%.ps): dump sigs for normal files too.

	* stepmake/aclocal.m4: robuster version detection.

	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): copy only if file
	exists, fixup src paths.

	* stepmake/bin/add-html-footer.py (built): junk gulp_file()

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Robustification for (gcc) version detection.

	* cygwin/postinstall-lilypond.sh: Do not fail if info docs aren't
	available.  This should be moved to postinstall-lilypond-doc.

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: simplify local-WWW-post. 
	remove -type l from find.

	* buildscripts/output-distance.py (ComparisonData.compare_trees):
	fixes. Don't follow symlinks.
	(ComparisonData.create_html_result_page): remove previous results.
	insert ../python in path.

	* scripts/lilypond-book.py (PREAMBLE_LY): spacing fixes.

2006-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.make.in (datadir): Add datarootdir to silence autoconf.

	* stepmake/aclocal.m4: Update for autoconf-2.59d.

2006-05-31  Erlend Aasland  <erlenda@gmail.com>

	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)

	* scm/output-ps.scm (repeat-slash): fix a bug that made repeat slash beams
	too wide.

2006-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (read_relocation_dir): Do not blindly
	dereference DIR.

2006-05-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/parser.yy: replace THIS by PARSER

	* Documentation/index.html.in: add link to test-results.html page.

	* Documentation/topdocs/NEWS.tely (Top): update NEWS entry.

	* scm/translation-functions.scm (format-bass-figure): translate
	digits over 10 to the left

	* scm/define-markup-commands.scm (translate-scaled): new markup.
