@@ -1,3 +1,9 @@
+2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile.in (tree-lib-prefix-current):
+	(tree-share-prefix-current): Use version number in tree, add
+	`current' symlinks.
+
 2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
@@ -14,6 +20,7 @@
 2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/aclocal.m4: Robustification for (gcc) version detection.
+	Another datarootdir reto.
 
 	* cygwin/postinstall-lilypond.sh: Do not fail if info docs aren't
 	available.  This should be moved to postinstall-lilypond-doc.
